# blackbull-session

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish-testpypi.yml  publish.yml
src/blackbull_session/: __init__.py  extension.py
tests/: test_session.py
